--- a/css/default.css
+++ b/css/default.css
@@ -39,10 +39,10 @@ src: url('http://cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.e
  * {outline:0 !important;}
 html,body,h1,h2,h3,h4,h5,h6,div,p,blockquote,pre,code,address,ul,ol,li,menu,nav,section,article,aside,
 dl,dt,dd,table,thead,tbody,tfoot,label,caption,th,td,form,fieldset,legend,hr,input,button,textarea,object,figure,figcaption {margin:0;padding:0;}
-html, body{width:100%;}
+html, body{width:100%; overflow-x: hidden;}
 html {font-size: 10px; letter-spacing:0rem;}
 html{-webkit-touch-callout:none; -webkit-tap-highlight-color:rgba(0, 0, 0, 0);}
-body{overflow-x: hidden; font-family: "Work Sans","NanumBarunGothic"; font-weight:400; width:100%; background:#fff; min-width:320px; -webkit-text-size-adjust:none;word-wrap:break-word;word-break:break-all;}
+body{font-family: "Work Sans","NanumBarunGothic"; font-weight:400; width:100%; background:#fff; min-width:320px; -webkit-text-size-adjust:none;word-wrap:break-word;word-break:break-all;}
 body,input,select,textarea,button {border:none; color: rgb(3, 0, 0);}
 button {cursor: pointer;}
 ul,ol,li{list-style:none;}
