--- a/css/layout.css
+++ b/css/layout.css
@@ -2,14 +2,13 @@
 
 /* desktop(1024px~) */
 @media screen and (min-width: 1024px) {
-
   .header .nav .mNav {display: none;}
 
+  .sub-box .privacybox .check label:first-child {margin-left: 0;}
 }
 
 /* tablet(768px~1024px) */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-
   .header .nav .mNav {display: none;}
 
   .box {height: 645px;}
@@ -23,9 +22,10 @@
   .box .r-box .list-box ul li a {font-size:16px;}
   .box .r-box .list-box ul li span {font-size:13px;}
 
+  .sub-box .privacybox .check label:first-child {margin-left: 0;}
 }
-@media screen and (min-width: 768px) and (max-width: 807px) {
 
+@media screen and (min-width: 768px) and (max-width: 807px) {
   .box .l-box {padding: 50px 30px;}
   .box .l-box .text-box span {font-size:19px;}
   .box .r-box {padding: 50px 30px;}
@@ -36,11 +36,12 @@
   .footer .rignt .copyright {display: block; text-align: center;}
   .footer .rignt .copyright p {font-size: 12px;}
   .footer .rignt .copyright p a {display: block; margin-right: 0; padding-bottom: 10px; font-size: 13px;}
+
+  .sub-box .privacybox .check {justify-content: center;}
 }
 
 /* mobile(~768px) */
-@media screen and (max-width: 768px) {
-    
+@media screen and (max-width: 768px) {    
   .header .nav .mNav {display: block;}
   .header .nav .slide {position: absolute; z-index: 99; top: 0; right: 0; width: 0; height: 120%; background-color: #1C2950; transition: all .3s;}
   .header .nav .slide ul {display: none;}
@@ -51,6 +52,7 @@
   .header .nav .slide.open ul {display: flex; width: 100%; flex-direction: column; position: absolute; top: 220px; border-top: 1px solid rgba(255, 255, 255, 0.5); padding-top: 16px;}
   .header .nav .slide.open ul li {padding: 20px 0 20px 15%; width: auto;}
   .header .nav .slide.open ul li a {color: #fff; font-size: 28px;}
+
   .dim.on {display: block; position: fixed; z-index: 80; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0,0.5);}
   
   .footer {display: block; height: auto;}
@@ -74,9 +76,15 @@
   .box .r-box .text-box a {font-size: 14px; margin-top: 10px;}
   .box .r-box .list-box ul li a {height: 49px; line-height: 49px; font-size: 15px;}
   .box .r-box .list-box ul li span {font-size: 13px;}
+
+  .sub-box .privacybox .check {justify-content: center;}
+
+  .sub-box .textbox p span {display: block;}
 }
-/* mobile(~500px) */
+
 @media screen and (max-width: 500px) {
+  .header .nav .slide.open p {font-size: 26px;}
+  .header .nav .slide.open ul li a {font-size: 26px;}
 
   .box .l-box .text-box strong {font-size: 30px;}
   .box .l-box .text-box p {font-size:22px;}
@@ -88,10 +96,10 @@
   .box .r-box .list-box ul li a {font-size: 14px;}
   .box .r-box .list-box ul li span {font-size: 12px;}
 
-  .header .nav .slide.open p {font-size: 26px;}
-  .header .nav .slide.open ul li a {font-size: 26px;}
+  .sub-box .textbox p {font-size: 16px;}
+  .sub-box .privacybox .content span {font-size: 14px;}
 }
-/* mobile(~380px) */
+
 @media screen and (max-width: 380px) {
   .box .l-box {height: 256px;}
   .box .l-box .text-box span {font-size: 16px; line-height: 21px;}
