--- a/css/layout.css
+++ b/css/layout.css
@@ -50,6 +50,7 @@
   .header .nav .slide.open ul {display: flex; width: 100%; flex-direction: column; position: absolute; top: 220px; border-top: 1px solid rgba(255, 255, 255, 0.5); padding-top: 16px;}
   .header .nav .slide.open ul li {padding: 20px 0 20px 15%; width: auto;}
   .header .nav .slide.open ul li a {color: #fff; font-size: 28px;}
+  .header .nav .slide.open li.active a {text-decoration: underline; text-decoration-color: rgba(255, 255, 255, 0.7); text-underline-position: under;}
 
   .dim.on {display: block; position: fixed; z-index: 80; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0,0.5);}
   
